--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -99,7 +99,7 @@ header{
     margin-right: 5%;
 }
 
-.Filtres .eco{
+.Filtres li:not(.filtres){
     border: #F2F2F2 solid 1px;
     border-radius: 15px;
     padding-right: 1.5em;
@@ -120,8 +120,9 @@ header{
     background-color: #DEEBFF;
 }
 
-.Filtres .eco:hover{
-    background-color: #DEEBFF;
+.Filtres :not(.filtres):hover{
+    background-color:yellow;
+    padding-right: 20px;
 }
 
 .Information{
@@ -136,6 +137,67 @@ header{
     background-color: #0065FC;
     color: white;
     border-radius: 20px;
-    outline: none;
+}
+
+.Hebergements{
+    border: solid #F2F2F2 1px;
+    border-radius: 15px;
+    margin: 25px 0 0 10px;
+    display: flex;
+    flex-direction: column;
+    background-color: #F2F2F2;
+    max-width: 60%;
+}
+
+.Contenu1{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 20px 20px 0 20px;  
+}
+
+.Contenu1 article{
+    width: 230px;
+    border: solid 1px #F2F2F2;
+    border-radius: 15px;
+    background-color: white;
+    margin: 0 0 20px 0;
+}
+
+.Contenu1 figure{
+    margin: 0;
+    padding: 5px;
+}
+
+.Contenu1 img{
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 15px 15px 0 0;
+}
+
+.Hebergements h2{
+    margin: 20px 0 0 20px;
+    font-size: 1.2em;
+}
+
+.Hebergements .Supplement{
+    margin: 0 0 20px 20px;
+    font-weight: bold;
+}
+
+.Contenu1 .description{
+    display: flex;
+    flex-direction: column;
+    margin-left: 15px;
+}
+
+.description h3 , p{
+    margin: 0;
+    font-size: 0.9em;
+}
+
+.description i{
+    margin-bottom: 0.4em;
 }
 
