--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -1,5 +1,6 @@
 body{
-    width: 1280px;
+
+    max-width: 1280px;
     margin: 0;
     padding: 0;
     font-family: 'Raleway';
@@ -378,7 +379,7 @@ footer p{
     margin-bottom: 0.5em;
 }
 
-@media screen and (min-width: 741px) and (max-width: 920px){
+@media screen and (max-width: 1276px){
     .MainContent{
         flex-direction: column;
     }
@@ -399,93 +400,113 @@ footer p{
         padding-bottom: 1.5em;
     }
 
-    .Contenu2{
-        flex-direction: row;
-        justify-content: space-between;
-    }
-
-    .Contenu2 article{
-        width: 350px;
-    }
-
-    .Inscrire , .Ancres{
-        font-size: 1.2em;
-    }
-
     .Ancres{
         margin-right: 2.5em;
     }
 
-    .description h3,.description p{
-        font-size: 1.1em;
+    .Contenu2{
+        flex-flow: row wrap;
+        justify-content: space-evenly;
     }
 
-    .description2 h3, .description2 p{
-        font-size: 1.1em;
-    }
-
-    .Activités h3{
-        font-size: 1.1em;
+    .Contenu2 article{
+        margin-right: 1.5em;
     }
 }
 
-@media screen and (min-width: 500px) and (max-width: 740px){
-    .Menu{
-        flex-direction: column;
+@media screen and (max-width: 1150px){
+    .Contenu3{
+        flex-wrap: wrap;
     }
 
-    .Ancres{
-        margin: 1em 0 0 0;
-        align-self: center;
+    .Contenu3 .Port{
+        margin-bottom: 1.5em;
+    }
+    
+    .Contenu3 div{
+        display: flex;
+        align-items: center;
     }
 
     .Ancres li{
-        padding: 0 2em;
-        font-size: 1.5em;
+        padding: 0 3em;
     }
 
-    .Inscrire{
-        margin-top: 1em;
-        font-size: 1.5em;
+    .Ancres{
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 1005px){
+    footer .hebergements, .Propos{
+        margin-right: 5em;
     }
 
-    .MainContent{
+    .Filtres{
+        flex-wrap: wrap;
+    }
+
+    .Filtres li:not(.filtres){
+        margin-bottom: 0.5em;
+    }
+}
+
+@media screen and (max-width: 981px){
+    .Contenu3 div{
+        flex-direction:column;
+    }
+
+    .Contenu3{
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 825px){
+    .Populaires{
+        align-items: center;
+    }
+
+    .Titre i{
+        justify-self: flex-end;
+        margin-left: 4em;
+    }
+    
+    .Hebergements{
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 730px){
+    .Ancres li{
+        padding: 0 1.5em;
+    }
+
+    .Ancres{
         flex-wrap: wrap;
         justify-content: center;
     }
 
-    .Populaires{
-        margin-top: 1.5em;
+    footer{
+        flex-direction: column;
     }
 
-    .Hebergements{
-        padding-bottom: 1.5em;
-        align-items: center;
-        margin-right: 1.5em;
-    }
-
-    .Contenu1{
-        justify-content: center;
-    }
-
-    footer li, footer p{
-        font-size: 1.2em;
-    }
-
-    .Introduction .titre{
-        font-size: 1.4em;
-    }
-    
-    .Filtres li:not(.filtres){
-        border: solid 3px #F2F2F2;
-        font-size: 1.2em;
+    footer .hebergements{
+        align-self: flex-end;
+        margin: 0;
     }
 }
 
-@media screen and (min-width: 321px) and (max-width: 499px){
-    header{
-        margin: 0 3em 0 3em;
+@media screen and (max-width: 661px){
+    .Contenu3 .Frioul{
+        margin-bottom: 1.5em;
     }
+
+    .Contenu3 .NotreDame{
+        margin-top: 1.5em;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 500px){
     .logo{
         flex-basis: 25%;
     }
@@ -493,23 +514,8 @@ footer p{
         flex-wrap: wrap;
     }
 
-    .Ancres{
-        justify-content: space-around;
-        margin: 0;
-        order: 3;
-        width: 100%;
-    }
-
-    .Inscrire{
-        font-size: 3em;
-    }
-
     .Ancres li{
         padding: 0;
-    }
-
-    .Ancres a{
-        font-size: 3em;
     }
 
     .Ancres a:hover{
@@ -524,17 +530,11 @@ footer p{
     }
 
     .Introduction .titre{
-        font-size: 4.7em;
         margin: 0;
     }
 
-    .Introduction p{
-        font-size: 2.5em;
-        line-height: 1.5em;
-    }
-
     form{
-        margin-top: 5em;
+        margin-top: 2em;
     }
 
     .Box{
@@ -542,16 +542,8 @@ footer p{
         border-radius: 2em;
     }
 
-    .Box .localisation{
-        font-size: 2em;
-        border-radius: 1em 0 0 1em;
-        padding: 1.5em;
-    }
-
     .Box .iconecache{
-        font-size: 2em;
         display: flex;
-        padding: 1.5em;
         border-radius: 1em;
         background-color: #0065FC;
         color: white;
@@ -567,16 +559,11 @@ footer p{
     }
 
     .Filtres{
-        margin: 3em 3em 0 3em;
-        flex-flow: row wrap;
+       flex-flow: row wrap;
     }
 
     .Filtres li:not(.filtres){
-        
         border: solid #F2F2F2 3px;
-        font-size: 3em;
-        margin: 0 1.5em 1.5em 0;
-        border-radius: 2em;
     }
 
     .Filtres i{
@@ -585,9 +572,14 @@ footer p{
 
     .filtres{
         flex-basis: 100%;
-        font-size: 3em;
         margin-bottom: 1.5em;
     }
+
+   
+
+
+
+    
 
     
 
