--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -1,10 +1,8 @@
 body{
-
     max-width: 1280px;
     margin: 0;
     padding: 0;
     font-family: 'Raleway';
-    border: green solid 1px;
 }
 
 header{
@@ -345,6 +343,11 @@ figure{
     padding: 10px 0 10px 10px;
 }
 
+main{
+    display: flex;
+    flex-direction: column;
+}
+
 footer{
     margin-top: 3em;
     display: flex;
@@ -382,10 +385,12 @@ footer p{
 @media screen and (max-width: 1276px){
     .MainContent{
         flex-direction: column;
+        align-items: center;
     }
 
     .Hebergements{
         margin-right: 1.5em;
+        align-items: center;
     }
 
     .Populaires{
@@ -402,15 +407,6 @@ footer p{
 
     .Ancres{
         margin-right: 2.5em;
-    }
-
-    .Contenu2{
-        flex-flow: row wrap;
-        justify-content: space-evenly;
-    }
-
-    .Contenu2 article{
-        margin-right: 1.5em;
     }
 }
 
@@ -461,21 +457,6 @@ footer p{
     }
 }
 
-@media screen and (max-width: 825px){
-    .Populaires{
-        align-items: center;
-    }
-
-    .Titre i{
-        justify-self: flex-end;
-        margin-left: 4em;
-    }
-    
-    .Hebergements{
-        align-items: center;
-    }
-}
-
 @media screen and (max-width: 730px){
     .Ancres li{
         padding: 0 1.5em;
@@ -506,14 +487,17 @@ footer p{
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 500px){
-    .logo{
-        flex-basis: 25%;
-    }
+@media screen and (min-width: 375px) and (max-width: 500px){
     .Menu{
         flex-wrap: wrap;
     }
 
+    .Ancres{
+        flex-basis: 100%;
+        justify-content: space-around;
+        order: 3;
+    }
+   
     .Ancres li{
         padding: 0;
     }
@@ -524,13 +508,7 @@ footer p{
     }
 
     .Introduction{
-        display: flex;
-        flex-direction: column;
-        margin-top: 2em;
-    }
-
-    .Introduction .titre{
-        margin: 0;
+        margin-top: 1.5em;
     }
 
     form{
@@ -538,13 +516,18 @@ footer p{
     }
 
     .Box{
-        border: solid #F2F2F2 3px;
-        border-radius: 2em;
+        border: solid #F2F2F2 1px;
+        border-radius: 0.8em;
+    }
+
+    .Box .localisation{
+        padding: 1em;
     }
 
     .Box .iconecache{
         display: flex;
-        border-radius: 1em;
+        padding: 1em;
+        border-radius: 0.8em;
         background-color: #0065FC;
         color: white;
     }
@@ -558,34 +541,82 @@ footer p{
         display: none;
     }
 
-    .Filtres{
-       flex-flow: row wrap;
+    .Filtres a{
+        font-size: 0.9em;
     }
-
-    .Filtres li:not(.filtres){
-        border: solid #F2F2F2 3px;
-    }
-
-    .Filtres i{
-        border-radius: 2em;
-    }
-
+    
     .filtres{
         flex-basis: 100%;
-        margin-bottom: 1.5em;
+        margin-bottom: 1em;
     }
 
-   
+    .Information{
+        align-items: flex-start;
+    }
 
+    main{
+        align-items: center;
+        justify-content: center;
+    }
 
+    .Hebergements{
+        order: 2;
+        background-color: white;
+        margin:0;
+        align-items: flex-start;
+    }
 
-    
+    .Contenu1{
+        flex-direction: column;
+    }
 
-    
+    .Contenu1 article{
+        border: solid 1px #F2F2F2;
+        width: 320px;
+    }
 
-    
+    .Populaires{
+        order: 1;
+        border-radius: 0;
+        margin: 0;
+    }
 
-    
+    .Contenu2 article{
+        width: 320px;
+    }
+
+    .Contenu3 article{
+        width: 320px;
+    }
+
+    .Contenu3 .Port img{
+        height: 120px;
+    }
+
+    .Contenu3 .Frioul img{
+        height: 120px;
+    }
+
+    .Contenu3 .NotreDame img{
+        height: 120px;
+    }
+
+    .Contenu3 .Calanques img{
+        height: 120px;
+    }
+
+    .Contenu3 .Pomègues img{
+        height: 120px;
+    }
+
+    .Contenu3 .Longchamp img{
+        height: 120px;
+    }
+
+    footer .hebergements{
+        align-self: flex-start;
+        margin: 1.5em 0;
+    }
 }
 
    
